--- a/main.css
+++ b/main.css
@@ -2,10 +2,17 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+}
+
+body{
+  background-image: url("assets/images/fondo.jpg");
+  background-size: 60%;
+
 }
 
 header p{
-  background-color: #6bd9ea;
+  background-color: #1da1f2;
   height: 60px;
   font-size: 2em;
   color: #fff;
@@ -16,7 +23,7 @@ header p{
   padding: 20px;
 }
 
-section{
+section {
   margin: 10px 80px;
 
 }
@@ -25,13 +32,19 @@ section{
   overflow:hidden;
 
 }
-
+.content{
+  background-color: #fff;
+  border: 1px solid black;
+  margin:  80px;  
+}
 
 .content-div, .content-form{
   display: inline-block;
   border: 1px solid black;
   width: 48%;
-  height: 300px;
+  height: 200px;
+  background-color: #fff;
+  vertical-align: top;
 }
 
 .content-form .text-content{
@@ -40,6 +53,6 @@ section{
 }
 
 .contador{
-  
+
   display: inline-block;
 }
